Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.3
-
None
-
-
7a46bbe66 (12.0)
Description
Reproduce:
- Create a new Qt widget application
- Click on File->New File->C++ class, choose QWidget for base class, click Complete
- Qt creator crash
Loading that dump in Visual Studio, this is the call stack
Attachments
Issue Links
- relates to
-
QTCREATORBUG-29914 Auto add new files to cmake project is not working.
-
- Closed
-